--- a/my-website/package.json
+++ b/my-website/package.json
@@ -20,7 +20,8 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "swagger-ui-react": "^5.10.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.0",
